--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-ecos"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 description = "ECOS embedded project cargo plugin"
 authors = ["leocheng <chengkelfan@qq.com>"]
@@ -39,6 +39,7 @@ walkdir = "2.5"
 include_dir = "0.7"
 dirs = "6.0"
 chrono = "0.4"
+humansize = "2.1"
 
 [build-dependencies]
 built = "0.8"
